update the promt

--- a/test_models/evaluvate_with_gimini/student_answers_md/EG_2020_3905.md
+++ b/test_models/evaluvate_with_gimini/student_answers_md/EG_2020_3905.md
@@ -1,26 +1,25 @@
-Here is the extracted handwritten text formatted as Markdown:
+Reg Number: $ EG / 2020 / 3905
 
-Reg Number: $EG/2020/3905
 Q3
 
 a) int mode (int ar[], int N)
-{ int mode = ar[i];
-  int maxcount = 0;
-
-for (int i=0 ; i < N ; i)
 {
-  ind count 8 2 ;
-  `ind` `deta`
-  for
-}
+    int mode = ar[1];
+    int maxcount = 0;
 
-if ar[i] == ar[j].
+for (int i = 0 ; i < N ; i)
+{
+    ind
+    count 8 2 ;
+    rad suka
+    for
+}
+if ar[i] = = ar[j].
 
 return mode.
-}
 
 b) unsigned long
 {
-  `b`
-  return b
+    }
+    return b
 }
